--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="TECH 36 - A premier tech event showcasing innovation, coding competitions, and more at GEC Raipur." />
+    <meta name="keywords" content="TECH 36, tech event, coding competition, innovation, GEC Raipur" />
+    <meta name="author" content="GEC Raipur" />
+    <meta property="og:title" content="TECH 36" />
+    <meta property="og:description" content="Join us for TECH 36, the ultimate tech event at GEC Raipur, featuring hackathons, coding competitions, and more!" />
+    <meta property="og:image" content="/logo/favicon-32x32.png" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TECH 36" />
+    <meta name="twitter:description" content="Join us for TECH 36, the ultimate tech event at GEC Raipur!" />
+    <meta name="twitter:image" content="/logo/favicon-32x32.png" />
+
+    <!-- Favicon and other icons -->
+    <link rel="icon" type="image/x-icon" href="/logo/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo/favicon-16x16.png" />
+    <link rel="manifest" href="/logo/site.webmanifest" />
+
+    <title>TECH 36</title>
   </head>
   <body>
     <div id="root"></div>
