--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="TECH 36 - A premier tech event showcasing innovation, coding competitions, and more at GEC Raipur." />
-    <meta name="keywords" content="TECH 36, tech event, coding competition, innovation, GEC Raipur" />
+    <meta name="description" content="TECHFEST 36 GARH - A premier tech event showcasing innovation, coding competitions, and more at GEC Raipur." />
+    <meta name="keywords" content="TECHFEST 36 GARH, tech event, coding competition, innovation, GEC Raipur" />
     <meta name="author" content="GEC Raipur" />
-    <meta property="og:title" content="TECH 36" />
-    <meta property="og:description" content="Join us for TECH 36, the ultimate tech event at GEC Raipur, featuring hackathons, coding competitions, and more!" />
+    <meta property="og:title" content="TECHFEST 36 GARH" />
+    <meta property="og:description" content="Join us for TECHFEST 36 GARH, the ultimate tech event at GEC Raipur, featuring hackathons, coding competitions, and more!" />
     <meta property="og:image" content="/logo/favicon-32x32.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TECH 36" />
-    <meta name="twitter:description" content="Join us for TECH 36, the ultimate tech event at GEC Raipur!" />
+    <meta name="twitter:title" content="TECHFEST 36 GARH" />
+    <meta name="twitter:description" content="Join us for TECHFEST 36 GARH, the ultimate tech event at GEC Raipur!" />
     <meta name="twitter:image" content="/logo/favicon-32x32.png" />
 
     <!-- Favicon and other icons -->
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/logo/favicon-16x16.png" />
     <link rel="manifest" href="/logo/site.webmanifest" />
 
-    <title>TECH 36</title>
+    <title>TECHFEST 36 GARH</title>
   </head>
   <body>
     <div id="root"></div>
